--- a/Third-Party-Auth-Website/style.css
+++ b/Third-Party-Auth-Website/style.css
@@ -29,7 +29,7 @@ body {
   transform: translateY(-50%);
 }
 .carousel-caption h1 {
-  font-size: 500%;
+  font-size: 300%;
   text-transform: uppercase;
   text-shadow: 1px 1px 10px #000;
 }
@@ -118,6 +118,8 @@ footer {
   background-color: #3f3f3f;
   color: #d5d5d5;
   padding-top: 2rem;
+  bottom: auto;
+  position: unset;
 }
 hr.light {
   border-top: 1px solid #d5d5d5;
@@ -188,6 +190,42 @@ hr.light-100 {
     height: 100%;
   }
 }
+
+@media (min-width: 768px) {
+  .h-md-100 {
+    height: 100vh;
+  }
+}
+.btn-round {
+  border-radius: 30px;
+}
+.bg-indigo {
+  background: indigo;
+}
+.text-cyan {
+  color: #35bdff;
+}
+#Login_box {
+  margin: 0 auto;
+  width: 70%;
+  height: 75%;
+  background-color: rgba(78, 205, 196, 0.2);
+  margin-top: 30vh;
+  transform: translateY(-30%);
+  box-shadow: 10px 10px 1px 0px skyblue;
+  border-radius: 10px;
+}
+
+#Signup_box {
+  margin: 0 auto;
+  width: 70%;
+  height: 85%;
+  background-color: rgba(78, 205, 196, 0.2);
+  margin-top: 30vh;
+  transform: translateY(-30%);
+  box-shadow: 10px 10px 1px 0px skyblue;
+  border-radius: 10px;
+}
 @media (max-width: 576px) {
   carousel-caption {
     top: 40%;
@@ -230,4 +268,99 @@ hr.light-100 {
 /*--- Bootstrap Padding Fix --*/
 [class*="col-"] {
   padding: 1rem;
+}
+
+/* Split the screen in half */
+.split {
+  height: 100%;
+  width: 50%;
+  position: absolute;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+/* Control the left side */
+.left {
+  left: 0;
+  background-color: #111;
+}
+
+/* Control the right side */
+.right {
+  right: 0;
+  background-color: red;
+}
+
+/* If you want the content centered horizontally and vertically */
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+/* Style the image inside the centered container, if needed */
+.centered img {
+  width: 150px;
+  border-radius: 50%;
+}
+
+input {
+  width: 85%;
+  height: 40px;
+  padding: 10px;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: inline-block;
+  background-color: #fafafa;
+  border: none;
+}
+
+input:focus {
+  outline: none !important;
+  border: 1px solid #4ecdc4;
+  box-shadow: 0 0 5px #719ece;
+}
+
+button {
+  outline: none !important;
+  font-family: Lobster;
+  margin-bottom: 15px;
+  border: none;
+  font-size: 20px;
+  padding: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.ripple {
+  background-position: center;
+  transition: background 0.8s;
+}
+.ripple:hover {
+  background: #47a7f5 radial-gradient(circle, transparent 1%, #4ecdc4 1%)
+    center/15000%;
+}
+.ripple:active {
+  background-color: #4ecdc4;
+  background-size: 100%;
+  transition: background 0s;
+}
+
+.ripple2 {
+  background-position: center;
+  transition: background 0.8s;
+}
+.ripple2:hover {
+  background: #47a7f5 radial-gradient(circle, transparent 1%, #ffffff 1%)
+    center/15000%;
+}
+.ripple2:active {
+  background-color: #fafafa;
+  background-size: 100%;
+  transition: background 0s;
 }
