--- a/third-party-auth-react/src/App.css
+++ b/third-party-auth-react/src/App.css
@@ -377,6 +377,11 @@ tr {
   border: 1px solid black;
 }
 
+th {
+  background-color: #808080;
+  text-align: center;
+}
+
 td {
   text-align: center;
 }
