--- a/third-party-auth-react/src/App.css
+++ b/third-party-auth-react/src/App.css
@@ -221,7 +221,7 @@ h6 span {
   transform: rotateY(180deg);
 }
 
-.checkbox:checked~.card-3d-wrap .card-3d-wrap-info .card-3d-wrapper {
+.checkbox:checked~.card-3d-wrap .card-3d-wrapper {
   transform: rotateY(180deg);
 }
 
